2009-12-20  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixSend.c (ServerSecure): [Patch 2917663]: Better support
	for server-interpreted access control addreses.

2009-12-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkListbox.c:	Fix gcc warning: ignoring return value of
				strtol, declared with attribute
				warn_unused_result.
	* unix/tkUnixEvent.c:	Fix gcc warning: dereferencing pointer xgePtr
				does break strict-aliasing rules.
	* generic/tkInt.decls:	CONSTify return values of TkKeysymToString,
	* generic/tkBind.c:	TkFindStateString, TkpGetString, TkpGetChar,
	* generic/tkIntDecls.h:	which are all not supposed to be modified by
	* generic/tkUtil.c:	the caller. In tkUtil.c this gets rid of a
	* carbon/tkMacOSXKeyboard.c:	dangerous type cast.
	* macosx/tkMacOSXKeyboard.c:
	* unix/tkUnixKey.c:
	* win/tkWinKey.c:

2009-12-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConfig.c:	Added another dimension of refCounting to the
	* generic/tkInt.c:	"option" Tcl_ObjType to improve memory troubles
	* generic/tkObj.c:	detailed in [Bug 2492179].  Also removed
	registration of the "option" Tcl_ObjType.
	*** POTENTIAL INCOMPATIBILITY *** for callers of
	Tcl_GetObjType("option") which must now handle a NULL return.

2009-12-15  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/unicodeout.tcl (usePresentationFormsFor): Split out
	the code to decide whether to use presentation forms for clarity, and
	add some more languages (though only in natural uncomposed form for
	Devanagari script).

2009-12-14  Kevin B. Kenny  <kennykb@acm.org>

	* library/demos/unicodeout.tcl: Added code to check for right-to-left
	support on Windows and adjust Hebrew and Arabic character strings
	accordingly. Changed the Hebrew string to 'ktb ebryt' (ktav Ivrit,
	"Hebrew writing") to be consistent with at least the Greek and Russian
	strings. Thanks to Rodrigo Readi for calling the inconsistency to our
	attention.

2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>
